trying to fix a small landscape error on safari ios

--- a/code/style.css
+++ b/code/style.css
@@ -217,6 +217,8 @@ header {
   .layout {
     width: 44vw;
     max-width: 500px;
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
   }
   
   header {
